--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <div class="bww">
     <img src="https://i.imgur.com/552jFv6.jpg" alt="Buffalo Wild Wings Config">
     <h3 class="Config_Desc">Buffalo Wild Wings</h3>
-    <a class="Get_Config" href="https://www.nulled.to/topic/994144-ob-anom-funimation-captures-premium/">Get Config</a>
+    <a class="Get_Config" href="https://www.nulled.to/topic/999322-ob-anom-buffalo-wild-wings-config-18k-cpm-proxyless-doesnt-ban-captures-points/>Get Config</a>
     <ul class="Config_List">
         <li>
             Proxies: No
