--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>ND03 Configs</title>
-    <link rel="stylesheet" type="text/css" href="/nd033.github.io/master/style.css">
+    <link rel="stylesheet" type="text/css" href="/nd033.github.io/style.css">
 </head>
 <body>
 <div class="funimation">
