--- a/index.html
+++ b/index.html
@@ -71,5 +71,26 @@
     </ul>
 </div>
 
+<div class="grammarly">
+    <img src="https://pbs.twimg.com/profile_images/1145736912193196033/ytFWK30j_400x400.png" alt="Grammarly Config">
+    <h3 class="Config_Desc">Grammarly</h3>
+    <a class="Get_Config" href="https://www.nulled.to/topic/1013144-ob-anom-grammarly-config-captures-sub-type-free-goes-to-free/">Get Config</a>
+    <ul class="Config_List">
+        <li>
+            Proxies: Yes
+        </li>
+        <li>
+            Capture: if Premum
+        </li>
+        <li>
+            Free accounts to free
+        </li>
+        <li>
+            Mail/User: Mail
+        </li>
+        <li>CPM: Depends</li>
+    </ul>
+</div>
+    
 </body>
 </html>
