--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             Capture: if Premium
         </li>
         <li>
-            Free accounts go to free
+            Free accounts to free
         </li>
         <li>
             Mail/User: Mail
@@ -60,7 +60,7 @@
             Capture: if Premium
         </li>
         <li>
-            Free accounts go to free
+            Free accounts to free
         </li>
         <li>
             Mail/User: Mail
