--- a/index.html
+++ b/index.html
@@ -91,6 +91,95 @@
         <li>CPM: Depends</li>
     </ul>
 </div>
+ 
+<div class="NordVPN">
+    <img src="https://s1.nordcdn.com/nordvpn/media/1.170.0/images/global/favicon/favicon-196x196.png" alt="X-VPN Config">
+    <h3 class="Config_Desc">NordVPN</h3>
+    <a class="Get_Config" href="https://www.nulled.to/topic/1006059-ob-anom-nordvpn-config-captures-expiration-date-expired-accs-go-to-expired-free-to-free/">Get Config</a>
+    <ul class="Config_List">
+        <li>
+            Proxies: Yes
+        </li>
+        <li>
+            Capture: Expiry Date
+        </li>
+        <li>
+            Free accounts to free, expired to expired
+        </li>
+        <li>
+            Mail/User: Mail
+        </li>
+        <li>
+            CPM: 3K w/ Decent Proxies
+        </li>
+    </ul>
+</div>
+<div class="Hulu">
+    <img src="https://images-na.ssl-images-amazon.com/images/I/51a4BVcGL2L.png" alt="X-VPN Config">
+    <h3 class="Config_Desc">Hulu</h3>
+    <a class="Get_Config" href="https://www.nulled.to/topic/1017231-ob-anom-hulu-config-captures-sub-type-free-goes-to-free/">Get Config</a>
+    <ul class="Config_List">
+        <li>
+            Proxies: Yes
+        </li>
+        <li>
+            Capture: if Premium + Subs
+        </li>
+        <li>
+            Free accounts to free
+        </li>
+        <li>
+            Mail/User: Mail
+        </li>
+        <li>
+            CPM: Depends
+        </li>
+    </ul>
+</div>
+<div class="x-vpn">
+    <img src="https://i.imgur.com/xUx05YT.png" alt="X-VPN Config">
+    <h3 class="Config_Desc">X-VPN</h3>
+    <a class="Get_Config" href="https://www.nulled.to/topic/1006029-ob-anom-x-vpn-proxyless-30k-cpm-success-premium-freefree/">Get Config</a>
+    <ul class="Config_List">
+        <li>
+            Proxies: No
+        </li>
+        <li>
+            Capture: if Premium
+        </li>
+        <li>
+            Free accounts to free
+        </li>
+        <li>
+            Mail/User: Mail
+        </li>
+        <li>
+            CPM: 30K
+        </li>
+    </ul>
+</div>
+<div class="x-vpn">
+    <img src="https://i.imgur.com/xUx05YT.png" alt="X-VPN Config">
+    <h3 class="Config_Desc">X-VPN</h3>
+    <a class="Get_Config" href="https://www.nulled.to/topic/1006029-ob-anom-x-vpn-proxyless-30k-cpm-success-premium-freefree/">Get Config</a>
+    <ul class="Config_List">
+        <li>
+            Proxies: No
+        </li>
+        <li>
+            Capture: if Premium
+        </li>
+        <li>
+            Free accounts to free
+        </li>
+        <li>
+            Mail/User: Mail
+        </li>
+        <li>
+            CPM: 30K
+        </li>
+    </ul>
+</div>
     
 </body>
 </html>
