--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 <head>
     <title>ND03 Configs</title>
     <link rel="stylesheet" type="text/css" href="/nd033.github.io/style.css">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-160199855-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-160199855-1');
+</script>
 </head>
 <body>
 <div class="funimation">
