--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
             Proxies: Yes
         </li>
         <li>
-            Capture: Premium
+            Capture: if Premium
         </li>
         <li>
             Free accounts to free
@@ -199,7 +199,7 @@
             Proxies: Yes
         </li>
         <li>
-            Capture: Member status + tokens
+            Capture: Member Status & Tokens
         </li>
         <li>
             Free accounts to free
@@ -237,13 +237,35 @@
 <div class="Minecraft">
     <img class="Minecraft-Logo" src="https://seeklogo.com/images/M/minecraft-logo-5EAD3A1535-seeklogo.com.png" alt="Minecraft Config">
     <h3 class="Config_Desc">Minecraft</h3>
-    <a class="Get_Config" href="https://www.nulled.to/topic/1009982-ob-anom-skinhub-proxyless-16k-cpm-captures-skin-inventory-balance-deposits-withdraws/">Get Config</a>
+    <a class="Get_Config" href="https://www.nulled.to/topic/1007387-ob-anom-minecraft-config-captcha-bypass-2k-cpm-w-free-no-capture/">Get Config</a>
     <ul class="Config_List">
         <li>
             Proxies: Yes
         </li>
         <li>
             Capture: None
+        </li>
+        <li>
+            Mail/User: Mail
+        </li>
+        <li>
+            CPM: Depends
+        </li>
+    </ul>
+</div>
+<div class="Insomnia">
+    <img src="https://upload.wikimedia.org/wikipedia/en/thumb/6/67/Insomnia_Cookies_logo.svg/1200px-Insomnia_Cookies_logo.svg.png" alt="Insomnia Config">
+    <h3 class="Config_Desc">Insomnia Cookies</h3>
+    <a class="Get_Config" href="https://www.nulled.to/topic/982053-ob-anom-insomnia-cookies-config-captures-rewards-and-points/">Get Config</a>
+    <ul class="Config_List">
+        <li>
+            Proxies: Yes, US only
+        </li>
+        <li>
+            Capture: Points & Rewards
+        </li>
+        <li>
+            Free accounts to free
         </li>
         <li>
             Mail/User: Mail
