--- a/index.html
+++ b/index.html
@@ -79,7 +79,28 @@
         </li>
     </ul>
 </div>
-
+<div class="AMC">
+    <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fupload.wikimedia.org%2Fwikipedia%2Fcommons%2Fthumb%2F0%2F03%2FAmc_theatres_logo.svg%2F1024px-Amc_theatres_logo.svg.png&f=1&nofb=1" alt="Insomnia Config">
+    <h3 class="Config_Desc">AMC</h3>
+    <a class="Buy_Config" href="https://www.nulled.to/topic/994959-30-ob-anom-amc-theatres-config-points-rewards-coupons-giftcard-balance-disney-balance-credit-balance/">Buy Config [$30]</a>
+    <ul class="Config_List">
+        <li>
+            Proxies: Yes, rotating US
+        </li>
+        <li>
+            Capture: Points + Rewards + Coupons + GC Balance + Disney Balance + Credit Balance
+        </li>
+        <li>
+            Free accounts to free
+        </li>
+        <li>
+            Mail/User: Mail
+        </li>
+        <li>
+            CPM: 600+
+        </li>
+    </ul>
+</div>
 <div class="grammarly">
     <img src="https://pbs.twimg.com/profile_images/1145736912193196033/ytFWK30j_400x400.png" alt="Grammarly Config">
     <h3 class="Config_Desc">Grammarly</h3>
