--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
   gtag('config', 'UA-160199855-1');
 </script>
+    <meta name="description" content="List of all my free & paid configs"/>
 </head>
 <body>
 <h1>Free Configs</h1>
