--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="description" content="List of all my free & paid configs"/>
 </head>
 <body>
-<h1>Free Configs</h1>
+<h1 class="free">Free Configs</h1>
 
 <div class="line"></div>
 
@@ -28,7 +28,7 @@
         <p>CPM: Depends</p>
         <p>Mail/User: Mail</p>
         <div class="lin3"></div>
-        <a href="https://www.nulled.to/topic/994144-ob-anom-funimation-captures-premium/">Download</a>
+        <a href="https://www.nulled.to/topic/994144-ob-anom-funimation-captures-premium/" target="_blank">Download</a>
     </div>
 
     <div class="configdesc">
@@ -39,7 +39,7 @@
         <p>CPM: Depends</p>
         <p>Mail/User: Mail</p>
         <div class="lin3"></div>
-        <a href="https://www.nulled.to/topic/1013144-ob-anom-grammarly-config-captures-sub-type-free-goes-to-free/">Download</a>
+        <a href="https://www.nulled.to/topic/1013144-ob-anom-grammarly-config-captures-sub-type-free-goes-to-free/" target="_blank">Download</a>
     </div>
     <div class="configdesc">
         <img src="https://i.imgur.com/ehxCQ6l.jpg">
@@ -49,7 +49,7 @@
         <p>CPM: 2K w/ Free Proxies</p>
         <p>Mail/User: Mail & User</p>
         <div class="lin3"></div>
-        <a href="https://www.nulled.to/topic/1006059-ob-anom-nordvpn-config-captures-expiration-date-expired-accs-go-to-expired-free-to-free-3k-cpm-w-decent-proxies/">Download</a>
+        <a href="https://www.nulled.to/topic/1006059-ob-anom-nordvpn-config-captures-expiration-date-expired-accs-go-to-expired-free-to-free-3k-cpm-w-decent-proxies/" target="_blank">Download</a>
     </div>
     <div class="configdesc">
         <img src="https://i.imgur.com/1ALJ0K2.jpg">
@@ -59,7 +59,7 @@
         <p>CPM: Depends</p>
         <p>Mail/User: Mail</p>
         <div class="lin3"></div>
-        <a href="https://www.nulled.to/topic/987121-ob-anom-disney-captures-sub-type-renew-date/">Download</a>
+        <a href="https://www.nulled.to/topic/987121-ob-anom-disney-captures-sub-type-renew-date/" target="_blank">Download</a>
     </div>
     <div class="configdesc">
         <img src="https://i.imgur.com/v3ZlBNc.jpg">
@@ -81,7 +81,7 @@
         <p>Mail/User: Mail</p>
         <div class="lin3"></div>
         <div class="lin2"></div>
-        <a href="https://www.nulled.to/topic/1006029-ob-anom-x-vpn-proxyless-30k-cpm-success-premium-freefree/">Download</a>
+        <a href="https://www.nulled.to/topic/1006029-ob-anom-x-vpn-proxyless-30k-cpm-success-premium-freefree/" target="_blank">Download</a>
     </div>
     <div class="configdesc">
         <img src="https://i.imgur.com/sNXRLzI.jpg">
@@ -91,7 +91,7 @@
         <p>CPM: Depends</p>
         <p>Mail/User: Mail</p>
         <div class="lin3"></div>
-        <a href="https://www.nulled.to/topic/982053-ob-anom-insomnia-cookies-config-captures-rewards-and-points/">Download</a>
+        <a href="https://www.nulled.to/topic/982053-ob-anom-insomnia-cookies-config-captures-rewards-and-points/" target="_blank">Download</a>
     </div>
     <div class="configdesc">
         <img src="https://i.imgur.com/YH9nxW6.jpg">
@@ -101,7 +101,7 @@
         <p>CPM: Good w/ Free Proxies</p>
         <p>Mail/User: Mail</p>
         <div class="lin3"></div>
-        <a href="https://www.nulled.to/topic/1024333-ob-anom-vyprvpn-config-good-cpm-free-accounts-to-free-premium-to-hits/">Download</a>
+        <a href="https://www.nulled.to/topic/1024333-ob-anom-vyprvpn-config-good-cpm-free-accounts-to-free-premium-to-hits/" target="_blank">Download</a>
     </div>
     <div class="configdesc">
         <img src="https://i.imgur.com/XnWV7la.jpg">
@@ -112,7 +112,7 @@
         <p>Mail/User: Mail</p>
         <div class="lin3"></div>
         <div class="lin2"></div>
-        <a href="https://www.nulled.to/topic/999322-ob-anom-buffalo-wild-wings-config-18k-cpm-proxyless-doesnt-ban-captures-points/">Download</a>
+        <a href="https://www.nulled.to/topic/999322-ob-anom-buffalo-wild-wings-config-18k-cpm-proxyless-doesnt-ban-captures-points/" target="_blank">Download</a>
     </div>
     <div class="configdesc">
         <img src="https://i.imgur.com/eseO5TG.jpg">
@@ -122,7 +122,7 @@
         <p>CPM: Good w/ Free Proxies</p>
         <p>Mail/User: Mail</p>
         <div class="lin3"></div>
-        <a href="https://www.nulled.to/topic/1007387-ob-anom-minecraft-config-captcha-bypass-2k-cpm-w-free-no-capture/">Download</a>
+        <a href="https://www.nulled.to/topic/1007387-ob-anom-minecraft-config-captcha-bypass-2k-cpm-w-free-no-capture/" target="_blank">Download</a>
     </div>
     <div class="configdesc">
         <img src="https://i.imgur.com/Y4G7eLj.png">
@@ -132,7 +132,7 @@
         <p>CPM: 16K</p>
         <p>Mail/User: Mail</p>
         <div class="lin3"></div>
-        <a href="https://www.nulled.to/topic/1009982-ob-anom-skinhub-proxyless-16k-cpm-captures-skin-inventory-balance-deposits-withdraws/">Download</a>
+        <a href="https://www.nulled.to/topic/1009982-ob-anom-skinhub-proxyless-16k-cpm-captures-skin-inventory-balance-deposits-withdraws/" target="_blank">Download</a>
     </div>
     <div class="configdesc">
         <img src="https://i.imgur.com/9Wtkg1O.jpg">
@@ -142,7 +142,45 @@
         <p>CPM: Good w/ Free Proxies</p>
         <p>Mail/User: Mail</p>
         <div class="lin3"></div>
-        <a href="https://www.nulled.to/topic/1017231-ob-anom-hulu-config-captures-sub-type-free-goes-to-free/">Download</a>
+        <a href="https://www.nulled.to/topic/1017231-ob-anom-hulu-config-captures-sub-type-free-goes-to-free/" target="_blank">Download</a>
+    </div>
+
+    <h1 class="paid">Paid Configs</h1>
+    <div class="redline"></div>
+    <div class="paidconfigs">
+        <div class="configdesc">
+            <img src="https://i.imgur.com/V8aGsj3.jpg">
+            <p>Proxies: Yes, US Rotating only</p>
+            <p>Capture: Points Rewards & Coupons</p>
+            <p>Free accounts go to free</p>
+            <p>CPM: 600-6K</p>
+            <p>Mail/User: Mail</p>
+            <div class="lin3"></div>
+            <div class="lin2"></div>
+            <a class="apaid" href="https://www.nulled.to/topic/994959-30-ob-anom-amc-theatres-config-points-rewards-coupons-giftcard-balance-disney-balance-credit-balance/" target="_blank">Buy [$30]</a>
+        </div>
+        <div class="configdesc">
+            <img src="https://i.imgur.com/k2ynvA8.png">
+            <p>Proxies: Yes</p>
+            <p>Capture: Wallet Balance</p>
+            <p>Free accounts go to free</p>
+            <p>CPM: 6K & 2.5K w/ Free</p>
+            <p>Mail/User: Mail</p>
+            <div class="lin3"></div>
+            <div class="lin2"></div>
+            <a class="apaid" href="https://www.nulled.to/topic/1032541-20-ob-anom-shein-config-points-wallet-balance-free-goes-to-free-good-cpm/" target="_blank">Buy [$20]</a>
+        </div>
+        <div class="configdesc">
+            <img src="https://i.imgur.com/1nTjhgw.jpg">
+            <p>Proxies: Yes</p>
+            <p>Capture: 100% Off Coupon</p>
+            <p>Only checks for 100% off</p>
+            <p>CPM: High</p>
+            <p>Mail/User: None</p>
+            <div class="lin3"></div>
+            <div class="lin2"></div>
+            <a class="apaid" href="https://www.nulled.to/topic/1035622-25-ob-anom-hellofresh-100-off-coupon-generator-checker-high-ratio/" target="_blank">Buy [$25]</a>
+        </div>
     </div>
 </div>
 </body>
