--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <p>Mail/User: User</p>
         <div class="lin3"></div>
         <div class="lin2"></div>
-        <a href="https://www.nulled.to/topic/987148-ob-anom-chaturbate-captures-membership-tokens/">Download</a>
+        <a href="#">Download</a>
     </div>
     <div class="configdesc">
         <img src="https://i.imgur.com/vzb1zFz.jpg">
@@ -144,6 +144,37 @@
         <div class="lin3"></div>
         <a href="https://www.nulled.to/topic/1017231-ob-anom-hulu-config-captures-sub-type-free-goes-to-free/" target="_blank">Download</a>
     </div>
+    <div class="configdesc">
+        <img src="https://i.imgur.com/s1DlIw5.jpg">
+        <p>Proxies: Yes</p>
+        <p>Capture: Balance</p>
+        <p>Free accounts go to free</p>
+        <p>CPM: Depends</p>
+        <p>Mail/User: Mail</p>
+        <div class="lin3"></div>
+        <a href="https://www.nulled.to/topic/997608-ob-anom-wendys-config-captures-balance/" target="_blank">Download</a>
+    </div>
+    <div class="configdesc">
+        <img src="https://i.imgur.com/fQipLVR.jpg">
+        <p>Proxies: Yes</p>
+        <p>Capture: Sub Type</p>
+        <p>Free accounts go to free</p>
+        <p>CPM: Depends</p>
+        <p>Mail/User: Mail & User</p>
+        <div class="lin3"></div>
+        <a href="https://www.nulled.to/topic/1023666-ob-anom-crunchyroll-config-captures-sub-type-expiry-date-decent-cpm-free-accounts-go-to-free/" target="_blank">Download</a>
+    </div>
+    <div class="configdesc">
+        <img src="https://i.imgur.com/c2Y2gvX.png">
+        <p>Proxies: Yes</p>
+        <p>Capture: All 3x Coints + Levels</p>
+        <p>Free accounts go to free</p>
+        <p>CPM: Depends</p>
+        <p>Mail/User: Email</p>
+        <div class="lin3"></div>
+        <div class="lin2"></div>
+        <a href="https://www.nulled.to/topic/1021113-15-ob-anom-firehousesubs-captures-points/" target="_blank">Download</a>
+    </div>
 
     <h1 class="paid">Paid Configs</h1>
     <div class="redline"></div>
@@ -182,6 +213,18 @@
             <a class="apaid" href="https://www.nulled.to/topic/1035622-25-ob-anom-hellofresh-100-off-coupon-generator-checker-high-ratio/" target="_blank">Buy [$25]</a>
         </div>
     </div>
+    <div class="configdesc">
+        <img src="https://i.imgur.com/E5Bs2qY.jpg">
+        <p>Proxies: Yes</p>
+        <p>Capture: Points</p>
+        <p>Free accounts go to free</p>
+        <p>CPM: Depends</p>
+        <p>Mail/User: Email</p>
+        <div class="lin3"></div>
+        <div class="lin2"></div>
+        <a class="apaid" href="https://www.nulled.to/topic/1021113-15-ob-anom-firehousesubs-captures-points/" target="_blank">Buy [$15]</a>
+    </div>
+    
 </div>
 </body>
 </html>
