--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <div class="lin3"></div>
         <a href="https://www.nulled.to/topic/1007387-ob-anom-minecraft-config-captcha-bypass-2k-cpm-w-free-no-capture/" target="_blank">Download</a>
     </div>
-    <div class="configdesc">
+        <div class="configdesc">
         <img src="https://i.imgur.com/Y4G7eLj.png">
         <p>Proxies: No</p>
         <p>Capture: Balance & Inventory</p>
@@ -172,8 +172,38 @@
         <p>CPM: Depends</p>
         <p>Mail/User: Email</p>
         <div class="lin3"></div>
+        <a href="https://www.nulled.to/topic/1001505-ob-anom-tibia-config-captures-coins-loyalty-points-tournament-points-levels-premium/" target="_blank">Download</a>
+    </div>
+    <div class="configdesc">
+        <img src="https://i.imgur.com/C9MJTEk.png">
+        <p>Proxies: Yes</p>
+        <p>Capture: Expiry Date</p>
+        <p>Free to free, expired to expired</p>
+        <p>CPM: Depends</p>
+        <p>Mail/User: Email</p>
+        <div class="lin3"></div>
+        <a href="https://www.nulled.to/topic/1044564-ob-anom-surfshark-vpn-config-captures-expiry-date-free-accs-to-free-expired-to-expired/" target="_blank">Download</a>
+    </div>
+    <div class="configdesc">
+        <img src="https://i.imgur.com/RDftJ78g.jpg">
+        <p>Proxies: Yes</p>
+        <p>Capture: Subscription Type</p>
+        <p>Free accounts go to free</p>
+        <p>CPM: Depends</p>
+        <p>Mail/User: Email</p>
+        <div class="lin3"></div>
+        <a href="https://www.nulled.to/topic/1009430-ob-anom-wwe-config-captures-subscription-free-goes-to-free/" target="_blank">Download</a>
+    </div>
+    <div class="configdesc">
+        <img src="https://i.imgur.com/xI9suEH.png">
+        <p>Proxies: No</p>
+        <p>Capture: Data Limit</p>
+        <p>Free accounts go to free</p>
+        <p>CPM: 30K</p>
+        <p>Mail/User: Email</p>
+        <div class="lin3"></div>
         <div class="lin2"></div>
-        <a href="https://www.nulled.to/topic/1021113-15-ob-anom-firehousesubs-captures-points/" target="_blank">Download</a>
+        <a href="https://www.nulled.to/topic/1021992-ob-anom-trustzone-vpn-30k-cpm-proxyless-captures-data-limit-free-accs-go-to-free/" target="_blank">Download</a>
     </div>
 
     <h1 class="paid">Paid Configs</h1>
