--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>ND03 Configs</title>
     <link rel="stylesheet" type="text/css" href="/nd033.github.io/style.css">
@@ -21,7 +21,7 @@
 
 <div class="configs">
     <div class="configdesc">
-        <img src="https://i.imgur.com/aFTkbZZ.png">
+        <img src="https://i.imgur.com/aFTkbZZ.png" alt="Funimation Config">
         <p>Proxies: Yes, US only</p>
         <p>Capture: if Premium</p>
         <p>Free accounts go to free</p>
@@ -31,7 +31,7 @@
     </div>
 
     <div class="configdesc">
-        <img src="https://i.imgur.com/bervyPd.png">
+        <img src="https://i.imgur.com/bervyPd.png" alt="Grammarly Config">
         <p>Proxies: Yes</p>
         <p>Capture: if Premium</p>
         <p>Free accounts go to free</p>
@@ -40,7 +40,7 @@
         <a href="https://www.nulled.to/topic/1013144-ob-anom-grammarly-config-captures-sub-type-free-goes-to-free/" target="_blank">Download</a>
     </div>
     <div class="configdesc">
-        <img src="https://i.imgur.com/ehxCQ6l.jpg">
+        <img src="https://i.imgur.com/ehxCQ6l.jpg" alt="NordVPN Config">
         <p>Proxies: Yes</p>
         <p>Capture: Expiry Date</p>
         <p>Free to free, expired to expired</p>
@@ -49,7 +49,7 @@
         <a href="https://www.nulled.to/topic/1006059-ob-anom-nordvpn-config-captures-expiration-date-expired-accs-go-to-expired-free-to-free-3k-cpm-w-decent-proxies/" target="_blank">Download</a>
     </div>
     <div class="configdesc">
-        <img src="https://i.imgur.com/1ALJ0K2.jpg">
+        <img src="https://i.imgur.com/1ALJ0K2.jpg" alt="Disney+ Config">
         <p>Proxies: Yes</p>
         <p>Capture: Sub Type & Renew Date</p>
         <p>Free to free, expired to expired</p>
@@ -58,17 +58,17 @@
         <a href="https://www.nulled.to/topic/987121-ob-anom-disney-captures-sub-type-renew-date/" target="_blank">Download</a>
     </div>
     <div class="configdesc">
-        <img src="https://i.imgur.com/v3ZlBNc.jpg">
+        <img src="https://i.imgur.com/v3ZlBNc.jpg" alt="ChaturNate Config">
         <p>Proxies: Yes</p>
         <p>Capture: if Premium</p>
         <p>Free accounts go to free</p>
         <p>CPM: Depends</p>
         <p>Mail/User: User</p>
         <div class="lin2"></div>
-        <a href="#">Download</a>
+        <a href="https://www.nulled.to/topic/987148-ob-anom-chaturbate-captures-membership-tokens/" target="_blank">Download</a>
     </div>
     <div class="configdesc">
-        <img src="https://i.imgur.com/vzb1zFz.jpg">
+        <img src="https://i.imgur.com/vzb1zFz.jpg" alt="X-VPN Config">
         <p>Proxies: No</p>
         <p>Capture: if Premium</p>
         <p>Free accounts go to free</p>
@@ -78,7 +78,7 @@
         <a href="https://www.nulled.to/topic/1006029-ob-anom-x-vpn-proxyless-30k-cpm-success-premium-freefree/" target="_blank">Download</a>
     </div>
     <div class="configdesc">
-        <img src="https://i.imgur.com/sNXRLzI.jpg">
+        <img src="https://i.imgur.com/sNXRLzI.jpg" alt="Insomnia Cookies Config">
         <p>Proxies: Yes, US only</p>
         <p>Capture: Points & Rewards</p>
         <p>Free accounts go to free</p>
@@ -87,7 +87,7 @@
         <a href="https://www.nulled.to/topic/982053-ob-anom-insomnia-cookies-config-captures-rewards-and-points/" target="_blank">Download</a>
     </div>
     <div class="configdesc">
-        <img src="https://i.imgur.com/YH9nxW6.jpg">
+        <img src="https://i.imgur.com/YH9nxW6.jpg" alt="VyprVPN Config">
         <p>Proxies: Yes</p>
         <p>Capture: if Premium</p>
         <p>Free accounts go to free</p>
@@ -96,7 +96,7 @@
         <a href="https://www.nulled.to/topic/1024333-ob-anom-vyprvpn-config-good-cpm-free-accounts-to-free-premium-to-hits/" target="_blank">Download</a>
     </div>
     <div class="configdesc">
-        <img src="https://i.imgur.com/XnWV7la.jpg">
+        <img src="https://i.imgur.com/XnWV7la.jpg" alt="Buffalo Wild Wings Config">
         <p>Proxies: No</p>
         <p>Capture: Points</p>
         <p>Free accounts go to free</p>
@@ -106,7 +106,7 @@
         <a href="https://www.nulled.to/topic/999322-ob-anom-buffalo-wild-wings-config-18k-cpm-proxyless-doesnt-ban-captures-points/" target="_blank">Download</a>
     </div>
     <div class="configdesc">
-        <img src="https://i.imgur.com/eseO5TG.jpg">
+        <img src="https://i.imgur.com/eseO5TG.jpg" alt="Minecraft Config">
         <p>Proxies: Yes</p>
         <p>Capture: None</p>
         <p>Doesn't check if free</p>
@@ -115,7 +115,7 @@
         <a href="https://www.nulled.to/topic/1007387-ob-anom-minecraft-config-captcha-bypass-2k-cpm-w-free-no-capture/" target="_blank">Download</a>
     </div>
         <div class="configdesc">
-        <img src="https://i.imgur.com/Y4G7eLj.png">
+        <img src="https://i.imgur.com/Y4G7eLj.png" alt="Skinhub Config">
         <p>Proxies: No</p>
         <p>Capture: Balance & Inventory</p>
         <p>Free accounts go to free</p>
@@ -124,7 +124,7 @@
         <a href="https://www.nulled.to/topic/1009982-ob-anom-skinhub-proxyless-16k-cpm-captures-skin-inventory-balance-deposits-withdraws/" target="_blank">Download</a>
     </div>
     <div class="configdesc">
-        <img src="https://i.imgur.com/9Wtkg1O.jpg">
+        <img src="https://i.imgur.com/9Wtkg1O.jpg" alt="Hulu Config">
         <p>Proxies: Yes</p>
         <p>Capture: Sub Type</p>
         <p>Free accounts go to free</p>
@@ -133,7 +133,7 @@
         <a href="https://www.nulled.to/topic/1017231-ob-anom-hulu-config-captures-sub-type-free-goes-to-free/" target="_blank">Download</a>
     </div>
     <div class="configdesc">
-        <img src="https://i.imgur.com/s1DlIw5.jpg">
+        <img src="https://i.imgur.com/s1DlIw5.jpg" alt="Wendy's Config">
         <p>Proxies: Yes</p>
         <p>Capture: Balance</p>
         <p>Free accounts go to free</p>
@@ -142,7 +142,7 @@
         <a href="https://www.nulled.to/topic/997608-ob-anom-wendys-config-captures-balance/" target="_blank">Download</a>
     </div>
     <div class="configdesc">
-        <img src="https://i.imgur.com/fQipLVR.jpg">
+        <img src="https://i.imgur.com/fQipLVR.jpg" alt="Crunchyroll Config">
         <p>Proxies: Yes</p>
         <p>Capture: Sub Type</p>
         <p>Free accounts go to free</p>
@@ -151,7 +151,7 @@
         <a href="https://www.nulled.to/topic/1023666-ob-anom-crunchyroll-config-captures-sub-type-expiry-date-decent-cpm-free-accounts-go-to-free/" target="_blank">Download</a>
     </div>
     <div class="configdesc">
-        <img src="https://i.imgur.com/c2Y2gvX.png">
+        <img src="https://i.imgur.com/c2Y2gvX.png" alt="Tibia Config">
         <p>Proxies: Yes</p>
         <p>Capture: All 3x Coints + Levels</p>
         <p>Free accounts go to free</p>
@@ -160,7 +160,7 @@
         <a href="https://www.nulled.to/topic/1001505-ob-anom-tibia-config-captures-coins-loyalty-points-tournament-points-levels-premium/" target="_blank">Download</a>
     </div>
     <div class="configdesc">
-        <img src="https://i.imgur.com/C9MJTEk.png">
+        <img src="https://i.imgur.com/C9MJTEk.png" alt="Surfshark VPN Config">
         <p>Proxies: Yes</p>
         <p>Capture: Expiry Date</p>
         <p>Free to free, expired to expired</p>
@@ -169,7 +169,7 @@
         <a href="https://www.nulled.to/topic/1044564-ob-anom-surfshark-vpn-config-captures-expiry-date-free-accs-to-free-expired-to-expired/" target="_blank">Download</a>
     </div>
     <div class="configdesc">
-        <img src="https://i.imgur.com/RDftJ78g.jpg">
+        <img src="https://i.imgur.com/RDftJ78g.jpg" alt="WWE Config">
         <p>Proxies: Yes</p>
         <p>Capture: Subscription Type</p>
         <p>Free accounts go to free</p>
@@ -178,7 +178,7 @@
         <a href="https://www.nulled.to/topic/1009430-ob-anom-wwe-config-captures-subscription-free-goes-to-free/" target="_blank">Download</a>
     </div>
     <div class="configdesc">
-        <img src="https://i.imgur.com/xI9suEH.png">
+        <img src="https://i.imgur.com/xI9suEH.png" alt="Trust.Zone VPN Config">
         <p>Proxies: No</p>
         <p>Capture: Data Limit</p>
         <p>Free accounts go to free</p>
@@ -192,7 +192,7 @@
     <div class="redline"></div>
     <div class="paidconfigs">
         <div class="configdesc">
-            <img src="https://i.imgur.com/V8aGsj3.jpg">
+            <img src="https://i.imgur.com/V8aGsj3.jpg" alt="AMC Config">
             <p>Proxies: Yes, US Rotating only</p>
             <p>Capture: Points Rewards & Coupons</p>
             <p>Free accounts go to free</p>
@@ -203,7 +203,7 @@
             <a class="apaid" href="https://www.nulled.to/topic/994959-30-ob-anom-amc-theatres-config-points-rewards-coupons-giftcard-balance-disney-balance-credit-balance/" target="_blank">Buy [$30]</a>
         </div>
         <div class="configdesc">
-            <img src="https://i.imgur.com/k2ynvA8.png">
+            <img src="https://i.imgur.com/k2ynvA8.png" alt="SHEIN Config">
             <p>Proxies: Yes</p>
             <p>Capture: Wallet Balance</p>
             <p>Free accounts go to free</p>
@@ -213,20 +213,9 @@
             <div class="lin2"></div>
             <a class="apaid" href="https://www.nulled.to/topic/1032541-20-ob-anom-shein-config-points-wallet-balance-free-goes-to-free-good-cpm/" target="_blank">Buy [$20]</a>
         </div>
-        <div class="configdesc">
-            <img src="https://i.imgur.com/1nTjhgw.jpg">
-            <p>Proxies: Yes</p>
-            <p>Capture: 100% Off Coupon</p>
-            <p>Only checks for 100% off</p>
-            <p>CPM: High</p>
-            <p>Mail/User: None</p>
-            <div class="lin3"></div>
-            <div class="lin2"></div>
-            <a class="apaid" href="https://www.nulled.to/topic/1035622-25-ob-anom-hellofresh-100-off-coupon-generator-checker-high-ratio/" target="_blank">Buy [$25]</a>
-        </div>
     </div>
     <div class="configdesc">
-        <img src="https://i.imgur.com/E5Bs2qY.jpg">
+        <img src="https://i.imgur.com/E5Bs2qY.jpg" alt="Firehouse Subs Config">
         <p>Proxies: Yes</p>
         <p>Capture: Points</p>
         <p>Free accounts go to free</p>
