--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <title>ND03 Configs</title>
     <link rel="stylesheet" type="text/css" href="/nd033.github.io/style.css">
+    <meta name="description" content="List of all my free & paid configs"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-160199855-1"></script>
 <script>
@@ -12,7 +14,7 @@
 
   gtag('config', 'UA-160199855-1');
 </script>
-    <meta name="description" content="List of all my free & paid configs"/>
+    
 </head>
 <body>
 <h1 class="free">Free Configs</h1>
