Added meta tags

--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
     <title>ND03 Configs</title>
     <link rel="stylesheet" type="text/css" href="/nd033.github.io/style.css">
+    <meta charset="utf-8">
     <meta name="description" content="List of all my free & paid configs"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="keywords" content="configs, openbullet, blackbullet, openbullet config">
+    <meta name="author" content="ND03">
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-160199855-1"></script>
 <script>
