--- a/index.html
+++ b/index.html
@@ -192,6 +192,26 @@
         <div class="lin2"></div>
         <a href="https://www.nulled.to/topic/1021992-ob-anom-trustzone-vpn-30k-cpm-proxyless-captures-data-limit-free-accs-go-to-free/" target="_blank">Download</a>
     </div>
+    <div class="configdesc">
+        <img src="https://i.imgur.com/m70QyA9.png" alt="TunnelBear VPN Config">
+        <p>Proxies: Yes</p>
+        <p>Capture: Sub Type & Expiry Date</p>
+        <p>Free accounts go to free</p>
+        <p>CPM: Depends</p>
+        <p>Mail/User: Email</p>
+        <div class="lin2"></div>
+        <a href="https://www.nulled.to/topic/991192-ob-anom-tunnelbear-captures-sub-type-renew-date/" target="_blank">Download</a>
+    </div>
+    <div class="configdesc">
+        <img src="https://i.imgur.com/a9BWaV2.png" alt="Viaplay.se Config">
+        <p>Proxies: Yes</p>
+        <p>Capture: Sub Type & Expiry Date</p>
+        <p>Free accounts go to free</p>
+        <p>CPM: Depends</p>
+        <p>Mail/User: Email</p>
+        <div class="lin2"></div>
+        <a href="https://www.nulled.to/topic/1009438-ob-anom-viaplayse-config-1k-cpm-w-free-captures-sub-type-free-goes-to-free/" target="_blank">Download</a>
+    </div>
 
     <h1 class="paid">Paid Configs</h1>
     <div class="redline"></div>
