--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <a href="https://www.nulled.to/topic/987148-ob-anom-chaturbate-captures-membership-tokens/" target="_blank">Download</a>
     </div>
     <div class="configdesc">
-        <img src="https://i.imgur.com/vzb1zFz.jpg" alt="X-VPN Config">
+        <img src="https://i.imgur.com/lAcOQ3V.jpg" alt="X-VPN Config">
         <p>Proxies: No</p>
         <p>Capture: if Premium</p>
         <p>Free accounts go to free</p>
@@ -193,7 +193,7 @@
         <a href="https://www.nulled.to/topic/1021992-ob-anom-trustzone-vpn-30k-cpm-proxyless-captures-data-limit-free-accs-go-to-free/" target="_blank">Download</a>
     </div>
     <div class="configdesc">
-        <img src="https://i.imgur.com/m70QyA9.png" alt="TunnelBear VPN Config">
+        <img src="https://i.imgur.com/Ww2CL4C.png" alt="TunnelBear VPN Config">
         <p>Proxies: Yes</p>
         <p>Capture: Sub Type & Expiry Date</p>
         <p>Free accounts go to free</p>
@@ -203,7 +203,7 @@
         <a href="https://www.nulled.to/topic/991192-ob-anom-tunnelbear-captures-sub-type-renew-date/" target="_blank">Download</a>
     </div>
     <div class="configdesc">
-        <img src="https://i.imgur.com/a9BWaV2.png" alt="Viaplay.se Config">
+        <img src="https://i.imgur.com/pIVE8N3.jpg" alt="Viaplay.se Config">
         <p>Proxies: Yes</p>
         <p>Capture: Sub Type & Expiry Date</p>
         <p>Free accounts go to free</p>
