--- a/index.html
+++ b/index.html
@@ -212,6 +212,16 @@
         <div class="lin2"></div>
         <a href="https://www.nulled.to/topic/1009438-ob-anom-viaplayse-config-1k-cpm-w-free-captures-sub-type-free-goes-to-free/" target="_blank">Download</a>
     </div>
+    <div class="configdesc">
+        <img src="https://i.imgur.com/onk9ziW.png" alt="UPlay Config">
+        <p>Proxies: Yes</p>
+        <p>Capture: Platform & Games</p>
+        <p>Free to free, 2FA to 2Factor</p>
+        <p>CPM: Depends</p>
+        <p>Mail/User: Email</p>
+        <div class="lin2"></div>
+        <a href="https://www.nulled.to/topic/1048711-ob-anom-uplay-config-captures-platform-games-free-accs-to-free-2fa-to-2factor-decent-cpm/" target="_blank">Download</a>
+    </div>
 
     <h1 class="paid">Paid Configs</h1>
     <div class="redline"></div>
