Added payment system

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="keywords" content="configs, openbullet, blackbullet, openbullet config">
     <meta name="author" content="ND03">
     <!-- Global site tag (gtag.js) - Google Analytics -->
+<script src="https://shoppy.gg/api/embed.js"></script> 
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-160199855-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -235,7 +236,7 @@
             <p>Mail/User: Mail</p>
             <div class="lin3"></div>
             <div class="lin2"></div>
-            <a class="apaid" href="https://www.nulled.to/topic/994959-30-ob-anom-amc-theatres-config-points-rewards-coupons-giftcard-balance-disney-balance-credit-balance/" target="_blank">Buy [$30]</a>
+            <button data-shoppy-product="Fnppd05">Buy[$30]</button> 
         </div>
         <div class="configdesc">
             <img src="https://i.imgur.com/k2ynvA8.png" alt="SHEIN Config">
