--- a/index.html
+++ b/index.html
@@ -228,17 +228,6 @@
     <div class="redline"></div>
     <div class="paidconfigs">
         <div class="configdesc">
-            <img src="https://i.imgur.com/V8aGsj3.jpg" alt="AMC Config">
-            <p>Proxies: Yes, US Rotating only</p>
-            <p>Capture: Points Rewards & Coupons</p>
-            <p>Free accounts go to free</p>
-            <p>CPM: 600-6K</p>
-            <p>Mail/User: Mail</p>
-            <div class="lin3"></div>
-            <div class="lin2"></div>
-            <button data-shoppy-product="Fnppd05">Buy [$30]</button> 
-        </div>
-        <div class="configdesc">
             <img src="https://i.imgur.com/k2ynvA8.png" alt="SHEIN Config">
             <p>Proxies: Yes</p>
             <p>Capture: Wallet Balance</p>
@@ -259,9 +248,8 @@
         <p>Mail/User: Email</p>
         <div class="lin3"></div>
         <div class="lin2"></div>
-        <a class="apaid" href="https://www.nulled.to/topic/1021113-15-ob-anom-firehousesubs-captures-points/" target="_blank">Buy [$15]</a>
+        <button data-shoppy-product="xax0uxE" class="apaid">Buy [$15]</button>
     </div>
-    
 </div>
 </body>
 </html>
