--- a/index.html
+++ b/index.html
@@ -224,19 +224,19 @@
         <a href="https://www.nulled.to/topic/1048711-ob-anom-uplay-config-captures-platform-games-free-accs-to-free-2fa-to-2factor-decent-cpm/" target="_blank">Download</a>
     </div>
 
-    <h1 class="paid">Paid Configs</h1>
+        <h1 class="paid">Paid Configs</h1>
     <div class="redline"></div>
     <div class="paidconfigs">
         <div class="configdesc">
-            <img src="https://i.imgur.com/k2ynvA8.png" alt="SHEIN Config">
-            <p>Proxies: Yes</p>
-            <p>Capture: Wallet Balance</p>
+            <img src="https://i.imgur.com/V8aGsj3.jpg" alt="AMC Config">
+            <p>Proxies: Yes, US Rotating only</p>
+            <p>Capture: Points Rewards & Coupons</p>
             <p>Free accounts go to free</p>
-            <p>CPM: 6K & 2.5K w/ Free</p>
+            <p>CPM: 600-6K</p>
             <p>Mail/User: Mail</p>
             <div class="lin3"></div>
             <div class="lin2"></div>
-            <a class="apaid" href="https://www.nulled.to/topic/1032541-20-ob-anom-shein-config-points-wallet-balance-free-goes-to-free-good-cpm/" target="_blank">Buy [$20]</a>
+            <button data-shoppy-product="nfVQT1T" class="apaid">Buy [$30]</button> 
         </div>
     </div>
     <div class="configdesc">
