--- a/index.html
+++ b/index.html
@@ -223,8 +223,18 @@
         <div class="lin2"></div>
         <a href="https://www.nulled.to/topic/1048711-ob-anom-uplay-config-captures-platform-games-free-accs-to-free-2fa-to-2factor-decent-cpm/" target="_blank">Download</a>
     </div>
+    <div class="configdesc">
+        <img src="https://i.imgur.com/s6dcHX5.png" alt="Reddit Config">
+        <p>Proxies: Yes</p>
+        <p>Capture: 0 karma goes to free</p>
+        <p>CPM: Depends</p>
+        <p>Mail/User: User</p>
+        <div class="lin2"></div>
+        <a href="https://www.nulled.to/topic/1048711-ob-anom-uplay-config-captures-platform-games-free-accs-to-free-2fa-to-2factor-decent-cpm/" target="_blank">Download</a>
+    </div>
 
-        <h1 class="paid">Paid Configs</h1>
+    
+    <h1 class="paid">Paid Configs</h1>
     <div class="redline"></div>
     <div class="paidconfigs">
         <div class="configdesc">
