--- a/index.html
+++ b/index.html
@@ -226,7 +226,8 @@
     <div class="configdesc">
         <img src="https://i.imgur.com/s6dcHX5.png" alt="Reddit Config">
         <p>Proxies: Yes</p>
-        <p>Capture: 0 karma goes to free</p>
+        <p>Capture: Post & Comment Karma</p>
+        <p>0 karma goes to free</p>
         <p>CPM: Depends</p>
         <p>Mail/User: User</p>
         <div class="lin2"></div>
