--- a/index.html
+++ b/index.html
@@ -233,8 +233,17 @@
         <div class="lin2"></div>
         <a href="https://www.nulled.to/topic/1051480-ob-anom-reddit-config-captures-post-karma-comment-karma-0-karma-goes-to-free/" target="_blank">Download</a>
     </div>
+    <div class="configdesc">
+        <img src="https://i.imgur.com/G1NXdaY.png" alt="Jersey Mike's Config">
+        <p>Proxies: Yes, US only</p>
+        <p>Capture: Points</p>
+        <p>0 Points goes to free</p>
+        <p>CPM: Depends</p>
+        <p>Mail/User: User</p>
+        <div class="lin2"></div>
+        <a href="https://www.nulled.to/topic/1059705-ob-anom-jersey-mikes-captures-points-free-goes-to-free/" target="_blank">Download</a>
+    </div>
 
-    
     <h1 class="paid">Paid Configs</h1>
     <div class="redline"></div>
     <div class="paidconfigs">
