--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
         <a href="https://www.nulled.to/topic/1051480-ob-anom-reddit-config-captures-post-karma-comment-karma-0-karma-goes-to-free/" target="_blank">Download</a>
     </div>
     <div class="configdesc">
-        <img src="https://i.imgur.com/G1NXdaY.png" alt="Jersey Mike's Config">
+        <img src="https://i.imgur.com/8xH4T4W.jpg" alt="Jersey Mike's Config">
         <p>Proxies: Yes, US only</p>
         <p>Capture: Points</p>
         <p>0 Points goes to free</p>
