Added config & fixed some shidd

--- a/index.html
+++ b/index.html
@@ -247,6 +247,7 @@
     <h1 class="paid">Paid Configs</h1>
     <div class="redline"></div>
     <div class="paidconfigs">
+        <div class="paidconfigs">
         <div class="configdesc">
             <img src="https://i.imgur.com/V8aGsj3.jpg" alt="AMC Config">
             <p>Proxies: Yes, US Rotating only</p>
@@ -266,9 +267,16 @@
         <p>Free accounts go to free</p>
         <p>CPM: Depends</p>
         <p>Mail/User: Email</p>
-        <div class="lin3"></div>
-        <div class="lin2"></div>
         <button data-shoppy-product="xax0uxE" class="apaid">Buy [$15]</button>
+    </div>
+    <div class="configdesc">
+        <img src="https://i.imgur.com/DpcgrjA.jpg" alt="HBO NOW Config">
+        <p>Proxies: Yes, US only</p>
+        <p>Capture: Expiry Date</p>
+        <p>Free to free, expired to expired</p>
+        <p>CPM: 1-2K</p>
+        <p>Mail/User: Email</p>
+        <button data-shoppy-product="zDIE01o" class="apaid">Buy [$10]</button>
     </div>
 </div>
 </body>
