Fixed image & added config

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
         <a href="https://www.nulled.to/topic/1051480-ob-anom-reddit-config-captures-post-karma-comment-karma-0-karma-goes-to-free/" target="_blank">Download</a>
     </div>
     <div class="configdesc">
-        <img src="https://i.imgur.com/8xH4T4W.jpg" alt="Jersey Mike's Config">
+        <img src="https://i.imgur.com/4bp96CF.jpg" alt="Jersey Mike's Config">
         <p>Proxies: Yes, US only</p>
         <p>Capture: Points</p>
         <p>0 Points goes to free</p>
@@ -242,6 +242,15 @@
         <p>Mail/User: User</p>
         <div class="lin2"></div>
         <a href="https://www.nulled.to/topic/1059705-ob-anom-jersey-mikes-captures-points-free-goes-to-free/" target="_blank">Download</a>
+    </div>
+    <div class="configdesc">
+        <img src="https://i.imgur.com/tHB0Y5j.png" alt="Luminati Proxies Config">
+        <p>Proxies: Yes</p>
+        <p>Capture: Sub Package</p>
+        <p>Free goes to free</p>
+        <p>CPM: 200-1000</p>
+        <p>Mail/User: User</p>
+        <a href="https://www.nulled.to/topic/1062412-ob-anom-luminati-proxies-captures-package-free-goes-to-free-free-proxies/" target="_blank">Download</a>
     </div>
 
     <h1 class="paid">Paid Configs</h1>
