FIXED SOMETHING SHUT THE FUCK UP IDOT

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
         <p>Capture: Points</p>
         <p>0 Points goes to free</p>
         <p>CPM: Depends</p>
-        <p>Mail/User: User</p>
+        <p>Mail/User: Mail</p>
         <div class="lin2"></div>
         <a href="https://www.nulled.to/topic/1059705-ob-anom-jersey-mikes-captures-points-free-goes-to-free/" target="_blank">Download</a>
     </div>
@@ -249,7 +249,7 @@
         <p>Capture: Sub Package</p>
         <p>Free goes to free</p>
         <p>CPM: 200-1000</p>
-        <p>Mail/User: User</p>
+        <p>Mail/User: Mail</p>
         <a href="https://www.nulled.to/topic/1062412-ob-anom-luminati-proxies-captures-package-free-goes-to-free-free-proxies/" target="_blank">Download</a>
     </div>
 
