--- a/index.html
+++ b/index.html
@@ -261,6 +261,16 @@
         <p>Mail/User: Mail</p>
         <a href="https://www.nulled.to/topic/1062412-ob-anom-luminati-proxies-captures-package-free-goes-to-free-free-proxies/" target="_blank">Download</a>
     </div>
+    <div class="configdesc">
+        <img src="https://i.imgur.com/4g4dPwZ.png" alt="Guess.com Config">
+        <p>Proxies: Yes</p>
+        <p>Capture: Sub Package</p>
+        <p>Free goes to free</p>
+        <p>CPM: 1000-3000</p>
+        <p>Mail/User: Mail</p>
+        <a href="https://www.nulled.to/topic/1064812-ob-anom-guesscom-captures-points-balance-free-goes-to-free/" target="_blank">Download</a>
+    </div>
+    
 
     <h1 class="paid">Paid Configs</h1>
     <div class="redline"></div>
