Added config and changed one down to paid.

--- a/index.html
+++ b/index.html
@@ -262,13 +262,13 @@
         <a href="https://www.nulled.to/topic/1062412-ob-anom-luminati-proxies-captures-package-free-goes-to-free-free-proxies/" target="_blank">Download</a>
     </div>
     <div class="configdesc">
-        <img src="https://i.imgur.com/4g4dPwZ.png" alt="Guess.com Config">
+        <img src="https://i.imgur.com/Qv2igjD.png" alt="Skillshare Config">
         <p>Proxies: Yes</p>
-        <p>Capture: Sub Package</p>
+        <p>Capture: Plan, Interval & if Top Teacher.</p>
         <p>Free goes to free</p>
-        <p>CPM: 1000-3000</p>
+        <p>CPM: Depends</p>
         <p>Mail/User: Mail</p>
-        <a href="https://www.nulled.to/topic/1064812-ob-anom-guesscom-captures-points-balance-free-goes-to-free/" target="_blank">Download</a>
+        <a href="https://www.nulled.to/topic/1069074-ob-anom-skillshare-config-captures-plan-payment-interval-if-top-teacher-free-goes-to-free/" target="_blank">Download</a>
     </div>
     
 
@@ -296,6 +296,15 @@
         <p>CPM: Depends</p>
         <p>Mail/User: Email</p>
         <button data-shoppy-product="xax0uxE" class="apaid">Buy [$15]</button>
+    </div>
+     <div class="configdesc">
+        <img src="https://i.imgur.com/4g4dPwZ.png" alt="Guess.com Config">
+        <p>Proxies: Yes</p>
+        <p>Capture: Sub Package</p>
+        <p>Free goes to free</p>
+        <p>CPM: 1000-3000</p>
+        <p>Mail/User: Mail</p>
+        <button data-shoppy-product="nfVQT1T" class="apaid">Buy [$20]</button>
     </div>
 </div>
 </body>
