--- a/index.html
+++ b/index.html
@@ -244,6 +244,15 @@
         <a href="https://www.nulled.to/topic/1059705-ob-anom-jersey-mikes-captures-points-free-goes-to-free/" target="_blank">Download</a>
     </div>
     <div class="configdesc">
+        <img src="https://i.imgur.com/ymYY00D.png" alt="Goose VPN Config">
+        <p>Proxies: Yes</p>
+        <p>Capture: Sub type & and expiry date</p>
+        <p>Free to free, expired to expired</p>
+        <p>CPM: Depends</p>
+        <p>Mail/User: Mail</p>
+        <a href="https://www.nulled.to/topic/1019176-ob-anom-goose-vpn-config-captures-sub-type-expiration-date-expired-to-expired-free-to-free/" target="_blank">Download</a>
+    </div>
+    <div class="configdesc">
         <img src="https://i.imgur.com/DpcgrjA.jpg" alt="HBO NOW Config">
         <p>Proxies: Yes, US only</p>
         <p>Capture: Expiry Date</p>
