--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
     <div class="configdesc">
         <img src="https://i.imgur.com/Qv2igjD.png" alt="Skillshare Config">
         <p>Proxies: Yes</p>
-        <p>Capture: Plan, Interval & if Top Teacher.</p>
+        <p>Capture: Plan, Interval & if Teacher</p>
         <p>Free goes to free</p>
         <p>CPM: Depends</p>
         <p>Mail/User: Mail</p>
