--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <a href="https://www.nulled.to/topic/987121-ob-anom-disney-captures-sub-type-renew-date/" target="_blank">Download</a>
     </div>
     <div class="configdesc">
-        <img src="https://i.imgur.com/v3ZlBNc.jpg" alt="ChaturNate Config">
+        <img src="https://i.imgur.com/v3ZlBNc.jpg" alt="ChaturBate Config">
         <p>Proxies: Yes</p>
         <p>Capture: if Premium</p>
         <p>Free accounts go to free</p>
@@ -80,7 +80,6 @@
         <p>Free accounts go to free</p>
         <p>CPM: 30K</p>
         <p>Mail/User: Mail</p>
-        <div class="lin2"></div>
         <a href="https://www.nulled.to/topic/1006029-ob-anom-x-vpn-proxyless-30k-cpm-success-premium-freefree/" target="_blank">Download</a>
     </div>
     <div class="configdesc">
@@ -200,7 +199,6 @@
         <p>Free accounts go to free</p>
         <p>CPM: Depends</p>
         <p>Mail/User: Email</p>
-        <div class="lin2"></div>
         <a href="https://www.nulled.to/topic/991192-ob-anom-tunnelbear-captures-sub-type-renew-date/" target="_blank">Download</a>
     </div>
     <div class="configdesc">
@@ -220,7 +218,6 @@
         <p>Free to free, 2FA to 2Factor</p>
         <p>CPM: Depends</p>
         <p>Mail/User: Email</p>
-        <div class="lin2"></div>
         <a href="https://www.nulled.to/topic/1048711-ob-anom-uplay-config-captures-platform-games-free-accs-to-free-2fa-to-2factor-decent-cpm/" target="_blank">Download</a>
     </div>
     <div class="configdesc">
@@ -230,7 +227,6 @@
         <p>0 karma goes to free</p>
         <p>CPM: Depends</p>
         <p>Mail/User: User</p>
-        <div class="lin2"></div>
         <a href="https://www.nulled.to/topic/1051480-ob-anom-reddit-config-captures-post-karma-comment-karma-0-karma-goes-to-free/" target="_blank">Download</a>
     </div>
     <div class="configdesc">
@@ -292,7 +288,6 @@
             <p>Free accounts go to free</p>
             <p>CPM: 600-6K</p>
             <p>Mail/User: Mail</p>
-            <div class="lin3"></div>
             <div class="lin2"></div>
             <button data-shoppy-product="nfVQT1T" class="apaid">Buy [$30]</button> 
         </div>
