--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
     <div class="configdesc">
         <img src="https://i.imgur.com/ymYY00D.png" alt="Goose VPN Config">
         <p>Proxies: Yes</p>
-        <p>Capture: Sub type & and expiry date</p>
+        <p>Capture: Sub type & expiry date</p>
         <p>Free to free, expired to expired</p>
         <p>CPM: Depends</p>
         <p>Mail/User: Mail</p>
