--- a/index.html
+++ b/index.html
@@ -275,6 +275,16 @@
         <p>Mail/User: Mail</p>
         <a href="https://www.nulled.to/topic/1069074-ob-anom-skillshare-config-captures-plan-payment-interval-if-top-teacher-free-goes-to-free/" target="_blank">Download</a>
     </div>
+    <div class="configdesc">
+        <img src="https://i.imgur.com/qEaXCov.png" alt="Fubo.tv Config">
+        <p>Proxies: Yes</p>
+        <p>Capture: Plan, Expiry Date & Addons</p>
+        <p>Free goes to free</p>
+        <p>CPM: Depends</p>
+        <p>Mail/User: Mail</p>
+        <a href="https://www.nulled.to/topic/1070410-ob-anom-fubotv-config-captures-plan-expiry-date-addons-good-cpm/" target="_blank">Download</a>
+    </div>
+    
     
 
     <h1 class="paid">Paid Configs</h1>
