--- a/index.html
+++ b/index.html
@@ -284,7 +284,15 @@
         <p>Mail/User: Mail</p>
         <a href="https://www.nulled.to/topic/1070410-ob-anom-fubotv-config-captures-plan-expiry-date-addons-good-cpm/" target="_blank">Download</a>
     </div>
-    
+    <div class="configdesc">
+        <img src="https://i.imgur.com/qhS3b1i.jpg" alt="ProGuides Config">
+        <p>Proxies: No</p>
+        <p>Capture: if Coach & Points</p>
+        <p>0 points goes to free</p>
+        <p>CPM: 21K</p>
+        <p>Mail/User: Mail & User</p>
+        <a href="https://www.nulled.to/topic/1067751-ob-anom-proguides-21k-cpm-proxyless-captures-if-coach-points-coach-earnings-free-goes-to-free/" target="_blank">Download</a>
+    </div>
     
 
     <h1 class="paid">Paid Configs</h1>
