Shortened length of text

--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
     <div class="configdesc">
         <img src="https://i.imgur.com/qEaXCov.png" alt="Fubo.tv Config">
         <p>Proxies: Yes</p>
-        <p>Capture: Plan, Expiry Date & Addons</p>
+        <p>Capture: Plan, Expiry & Addons</p>
         <p>Free goes to free</p>
         <p>CPM: Depends</p>
         <p>Mail/User: Mail</p>
