--- a/index.html
+++ b/index.html
@@ -293,7 +293,15 @@
         <p>Mail/User: Mail & User</p>
         <a href="https://www.nulled.to/topic/1067751-ob-anom-proguides-21k-cpm-proxyless-captures-if-coach-points-coach-earnings-free-goes-to-free/" target="_blank">Download</a>
     </div>
-    
+    <div class="configdesc">
+        <img src="https://i.imgur.com/X8ilE8v.jpg" alt="Duolingo Config">
+        <p>Proxies: Yes</p>
+        <p>Capture: if Plus & Crowns, Gems, XP</p>
+        <p>0 points goes to free</p>
+        <p>CPM: 21K</p>
+        <p>Mail/User: Mail & User</p>
+        <a href="https://www.nulled.to/topic/1070619-ob-anom-duolingo-config-captures-if-plus-crowns-lingots-xp-free-goes-to-free/" target="_blank">Download</a>
+    </div>
 
     <h1 class="paid">Paid Configs</h1>
     <div class="redline"></div>
