--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
     <div class="configdesc">
         <img src="https://i.imgur.com/X8ilE8v.jpg" alt="Duolingo Config">
         <p>Proxies: Yes</p>
-        <p>Capture: if Plus & Crowns, Gems, XP</p>
+        <p>Capture: if Plus & Crowns Gems XP</p>
         <p>0 points goes to free</p>
         <p>CPM: 21K</p>
         <p>Mail/User: Mail & User</p>
