Fixed some stuff

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
     <div class="configdesc">
         <img src="https://i.imgur.com/c2Y2gvX.png" alt="Tibia Config">
         <p>Proxies: Yes</p>
-        <p>Capture: All 3x Coints + Levels</p>
+        <p>Capture: All 3x Coins + Levels</p>
         <p>Free accounts go to free</p>
         <p>CPM: Depends</p>
         <p>Mail/User: Email</p>
@@ -297,7 +297,7 @@
         <img src="https://i.imgur.com/X8ilE8v.jpg" alt="Duolingo Config">
         <p>Proxies: Yes</p>
         <p>Capture: if Plus & Crowns Gems XP</p>
-        <p>0 points goes to free</p>
+        <p>Free goes to free</p>
         <p>CPM: 21K</p>
         <p>Mail/User: Mail & User</p>
         <a href="https://www.nulled.to/topic/1070619-ob-anom-duolingo-config-captures-if-plus-crowns-lingots-xp-free-goes-to-free/" target="_blank">Download</a>
