--- a/index.html
+++ b/index.html
@@ -316,7 +316,17 @@
             <p>Mail/User: Mail</p>
             <div class="lin2"></div>
             <button data-shoppy-product="nfVQT1T" class="apaid">Buy [$30]</button> 
+            </div>
+    </div>
         </div>
+        <div class="configdesc">
+        <img src="https://i.imgur.com/R08XNNd.jpg" alt="Valorant Config">
+        <p>Proxies: Yes</p>
+        <p>Capture: Region & Mail Status</p>
+        <p>Acc w/o goes to free</p>
+        <p>CPM: 400-5000</p>
+        <p>Mail/User: User</p>
+        <button data-shoppy-product="hc7f3Ww" class="apaid">Buy [$10]</button>
     </div>
     <div class="configdesc">
         <img src="https://i.imgur.com/E5Bs2qY.jpg" alt="Firehouse Subs Config">
@@ -335,7 +345,7 @@
         <p>CPM: 1000-3000</p>
         <p>Mail/User: Mail</p>
         <button data-shoppy-product="nfVQT1T" class="apaid">Buy [$20]</button>
-    </div>
+    
 </div>
 </body>
 </html>
