Deleted accident yes

--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
         <p>Capture: if Plus & Crowns Gems XP</p>
         <p>Free goes to free</p>
         <p>CPM: Usually High</p>
-        <p>Mail/User: Mail & User</p>
+        <p>Mail/User: User</p>
         <a href="https://www.nulled.to/topic/1070619-ob-anom-duolingo-config-captures-if-plus-crowns-lingots-xp-free-goes-to-free/" target="_blank">Download</a>
     </div>
 
