--- a/index.html
+++ b/index.html
@@ -302,6 +302,15 @@
         <p>Mail/User: User</p>
         <a href="https://www.nulled.to/topic/1070619-ob-anom-duolingo-config-captures-if-plus-crowns-lingots-xp-free-goes-to-free/" target="_blank">Download</a>
     </div>
+    <div class="configdesc">
+        <img src="https://i.imgur.com/G1ZnIlI.jpg" alt="Revolve Config">
+        <p>Proxies: Yes</p>
+        <p>Capture: Store Credit</p>
+        <p>Free goes to free</p>
+        <p>CPM: Usually High</p>
+        <p>Mail/User: User</p>
+        <a href="https://www.nulled.to/topic/1074190-ob-anom-revolve-config-captures-store-credit-free-goes-to-free/" target="_blank">Download</a>
+    </div>
 
     <h1 class="paid">Paid Configs</h1>
     <div class="redline"></div>
