--- a/index.html
+++ b/index.html
@@ -311,6 +311,15 @@
         <p>Mail/User: User</p>
         <a href="https://www.nulled.to/topic/1074190-ob-anom-revolve-config-captures-store-credit-free-goes-to-free/" target="_blank">Download</a>
     </div>
+    <div class="configdesc">
+        <img src="https://i.imgur.com/cPZ1WlC.jpg" alt="Curiositystream Config">
+        <p>Proxies: Yes</p>
+        <p>Capture: Plan & Renew/Expiry Date</p>
+        <p>Free to free, expired to expired</p>
+        <p>CPM: 1K w/ Decent Proxies</p>
+        <p>Mail/User: User</p>
+        <a href="https://www.nulled.to/topic/1076499-ob-anom-curiositystream-captures-plan-expiry-or-renew-date-1k-cpm-free-goes-to-free-expired-to-expired/" target="_blank">Download</a>
+    </div>
 
     <h1 class="paid">Paid Configs</h1>
     <div class="redline"></div>
