--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="keywords" content="configs, openbullet, blackbullet, openbullet config">
     <meta name="author" content="ND03">
-    <link rel="icon" href="hhttps://i.imgur.com/veVsrrj.png">
+    <link rel="icon" href="https://i.imgur.com/veVsrrj.png">
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script src="https://shoppy.gg/api/embed.js"></script> 
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-160199855-1"></script>
